[package]
name = "pandora-kms"
version = "0.1.2-alpha.1"
edition = "2021"
description = "personal knowledge management system"
authors = ["Birnadin Erick"]

readme = "README.md"
license = "MIT"

homepage = "https://pandora.birn.cc"
documentation = "https://pandora.birn.cc/docs"
repository = "https://github.com/BirnadinErick/pandora/"

keywords = ["markdown", "kms", "knowledge", "management", "parser"]
categories = ["command-line-utilities"]

[dependencies]
glob = "0.3.1"
itertools = "0.11.0"
regex = "1.9.1"
